@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r8p10",
+  "version": "v8r8p11",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p24",
+      [ "Dirac", "v6r17p25",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v11r14",
