@@ -1,3 +1,14 @@
+[v8r8p11]
+use DIRAC v6r17p25
+
+* Doc: More detail about updating pilot version
+* In gitlab-ci, take the releases.cfg in a different branch depending on the tag
+* PopularityAnalysisAgent: alow to specify a mail sender address
+* Correct documentation for making releases
+* remove CAs scripts
+* do not ignore the run directory
+* Document prod/run flushing
+
 [v8r8p10]
 use DIRAC v6r17p24
 
